# robotica-rust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.nix  Cargo.toml  Dockerfile  LICENSE  README.md  docker.sh  flake.nix  influx.sh  node-packages.nix  npm-deps-hash  osv-scanner.toml  renovate.json  run.sh  run_docker
brian-backend/: Cargo.toml
brian-backend/src/: amber.rs  audience.rs  car.rs  config.rs  delays.rs  environment_monitor.rs  ha.rs  hdmi.rs  influxdb.rs  lights.rs  logging.rs  main.rs  metrics.rs  open_epaper_link.rs  robotica.rs  rooms.rs  tesla.rs
brian-backend/src/amber/: api.rs  car.rs  combined.rs  hot_water.rs  logging.rs  mod.rs  plan.rs  price_category.rs  private.rs  rules.rs  user_plan.rs
brian-backend/src/tesla/: command_processor.rs  commands.rs  mod.rs  monitor_charging.rs  monitor_doors.rs  monitor_location.rs  monitor_teslamate_location.rs  plug_in_reminder.rs  private.rs  token.rs
brian-frontend/: .gitignore  Cargo.toml  LICENSE-ICONS  LICENSE-ICONS.md  package-lock.json  package.json  webpack.config.js
brian-frontend/assets/css/: custom.scss
brian-frontend/assets/js/: index.js
brian-frontend/assets/static/: index.html
brian-frontend/assets/static/images/: build  fan_hard_off_64x64.tga  fan_off_64x64.tga  fan_on_64x64.tga  fan_on_other_64x64.tga  light_64x64.tga  light_64x64.xcf  light_hard_off_64x64.tga  (+11 more)
brian-frontend/src/: lib.rs  zigbee2mqtt.rs
brian-frontend/src/components/: chat.rs  lights.rs  mod.rs  require_connection.rs  rooms.rs  schedule_view.rs  tags_view.rs  welcome.rs
brian-frontend/tests/: app.rs
brian-node-rust/: Cargo.toml
brian-node-rust/src/: chat.html  delays.rs  hdmi.rs  http.rs  main.rs  robotica.rs  tesla.rs
brian-node-rust/src/flows/: common.rs  espresence.rs  google.rs  life360.rs  mod.rs  robotica.rs  tesla.rs  zigbee.rs
brian-node-rust/src/http/: mod.rs  oidc.rs  urls.rs
freeswitch/: Cargo.toml
freeswitch/src/: config.rs  freeswitch.rs  main.rs  phone_db.rs
robotica-backend/: Cargo.toml  build.rs
robotica-backend/python/: pyproject.toml  robotica.py
robotica-backend/src/: calendar.rs  car.rs  config.rs  entities.rs  ha.rs  hdmi.rs  hdmi_matrix.rs  influxdb.rs  lib.rs  lights.rs  logging.rs  main.rs  metrics.rs  monitor_location.rs  open_epaper_link.rs  serde.rs  tasks.rs
robotica-backend/src/amber/: api.rs  car.rs  combined.rs  hot_water.rs  logging.rs  mod.rs  plan.rs  private.rs  rules.rs  user_plan.rs  water_heater.rs
robotica-backend/src/conditions/: ast.rs  conditions.lalrpop  mod.rs  test.rs
robotica-backend/src/database/: locations.rs  mod.rs
robotica-backend/src/devices/: fake_switch.rs  lifx.rs  mod.rs
robotica-backend/src/pipes/: delays.rs  mod.rs
robotica-backend/src/scheduling/: calendar.rs  classifier.rs  conditions.lalrpop  conditions.rs  executor.rs  mod.rs  scheduler.rs  sequencer.rs  test.rs
robotica-backend/src/services/: life360.rs  mod.rs
robotica-backend/src/sinks/: mod.rs
robotica-backend/src/sources/: timer.rs
robotica-backend/src/tesla/: command_processor.rs  monitor_charging.rs  monitor_doors.rs  monitor_location.rs  monitor_teslamate_location.rs  plug_in_reminder.rs  private.rs  token.rs
robotica-backend/test/: classifications.yaml  sequences.yaml
robotica-backend/tests/: hdmi.rs
robotica-common/: Cargo.toml  build.rs
robotica-common/src/: anavi_thermometer.rs  config.rs  datetime.rs  lib.rs  location_source.rs  mqtt.rs  owntracks.rs  protobuf.rs  robotica.rs  scheduler.rs  shelly.rs  teslamate.rs  user.rs  version.rs  websocket.rs  zigbee2mqtt.rs  zwave.rs
robotica-common/src/controllers/: hdmi.rs  lights.rs  lights2.rs  mod.rs  music.rs  music2.rs  switch.rs  tasmota.rs  zwave.rs
robotica-common/src/mqtt/: topics.rs
robotica-common/src/protos/: mod.rs  websocket.proto
robotica-common/src/robotica/: audio.rs  commands.rs  entities.rs  hdmi.rs  hdmi_matrix.rs  http_api.rs  lights.rs  locations.rs  message.rs  mod.rs  occupancy.rs  switch.rs  tasks.rs  zones.rs
robotica-freeswitch/: .gitignore  Cargo.toml
robotica-freeswitch/src/: config.rs  freeswitch.rs  main.rs  phone_db.rs
robotica-frontend/: .gitignore  Cargo.toml  README.md  build.sh  install  node-packages.nix  osv-scanner.toml  package-lock.json  package.json  update.sh  webpack.config.js
robotica-frontend/assets/css/: custom.scss
robotica-frontend/assets/js/: backend.js  index.js
robotica-frontend/assets/static/: index.html
robotica-frontend/src/: lib.rs  main.rs  types.rs  version.rs
robotica-frontend/src/components/: app.rs  button.rs  car.rs  chat.rs  control.rs  hot_water.rs  lights.rs  locations.rs  login.rs  map.rs  mod.rs  mqtt_last.rs  nav_bar.rs  occupancy_view.rs  prices.rs  require_connection.rs  rooms.rs  schedule.rs  schedule_view.rs  tags.rs  tags_view.rs  water_heater.rs  welcome.rs  ws_client.rs
robotica-frontend/src/robotica_wasm/: draw_control.rs  macros.rs  mod.rs  robotica.rs
robotica-frontend/src/services/: icons.rs  mod.rs  protocol.rs  robotica.rs  websocket.rs
robotica-frontend/tests/: app.rs
robotica-slint/: .gitignore  Cargo.toml  build.rs
robotica-slint/src/: audio.rs  command.rs  config.rs  duration.rs  main.rs  partial_command.rs  ui.rs
robotica-slint/ui/: appwindow.slint
robotica-tokio/: Cargo.toml
robotica-tokio/examples/: rrule_date_bug.rs
robotica-tokio/fixtures/: additional_events.ics  daily_events.ics
robotica-tokio/python/: pyproject.toml  robotica.py
robotica-tokio/src/: entities.rs  lib.rs  serde.rs
robotica-tokio/src/conditions/: ast.rs  test.rs
robotica-tokio/src/database/: locations.rs  mod.rs  postgis.rs  zones.rs
robotica-tokio/src/devices/: fake_switch.rs  lifx.rs  mod.rs
robotica-tokio/src/pipes/: mod.rs
robotica-tokio/src/scheduling/: calendar.rs  classifier.rs  executor.rs  scheduler.rs  sequencer.rs
robotica-tokio/src/services/: mod.rs
robotica-tokio/src/sinks/: mod.rs
robotica-tokio/src/sources/: timer.rs
robotica-tokio/test/: classifications.yaml  schedule.yaml  sequences.yaml
robotica-tokio/tests/: hdmi.rs  hdmi_matrix.rs
robotica-tokio/tests/common/: mod.rs
(+199 files in other folders)
