[patch.crates-io]
# workaround to break the circular dependency for ahash(https://github.com/tkaitchuck/aHash/issues/95)
getrandom = { git = 'https://github.com/vladimir-dd/getrandom.git'}

[workspace]
members = [
    "robotica-backend",
    "robotica-frontend",
    "robotica-common",
    "robotica-slint",
    "brian-backend",
]
resolver = "2"