[package]
name = "brian-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.112"
anyhow = "1.0.81"
serde_yaml = "0.9.30"
chrono = { version = "0.4.37", features = ["serde"] }
chrono-tz = "0.8.6"
thiserror = "1.0.57"
color-backtrace = "0.6.1"
tracing = "0.1.35"
tracing-subscriber = "0.3.18"
robotica-common = { path = "../robotica-common", features = ["websockets"] }
robotica-backend = { path = "../robotica-backend", features = ["websockets", "scheduler"] }
influxdb = { version = "0.7.2", features = ["derive"]}
reqwest = { version = "0.11.26", features = ["json"] }
envconfig = "0.10.0"
tap = "1.0.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
geo = { version = "0.28.0" }

[dev-dependencies]
float-cmp = "0.9.0"
