[package]
name = "brian-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "1.0.91"
serde_yml = "0.0.10"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
thiserror = "1.0.62"
color-backtrace = "0.6.1"
robotica-common = { path = "../robotica-common", features = ["websockets"] }
robotica-tokio = { path = "../robotica-tokio", features = ["websockets", "scheduler"] }
robotica-macro = { path = "../robotica-macro"}
influxdb = { version = "0.7.2", features = ["derive"]}
reqwest = { version = "0.12.5", features = ["json"] }
envconfig = "0.11.0"
tap = "1.0.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
geo = { version = "0.28.0" }
url = "2.5.2"
serde_tuple = "1.0.0"

data-encoding = "2.6.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-core = "0.1.17"
tracing-opentelemetry = "0.27.0"
opentelemetry = { version = "0.26.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = ["logs", "metrics", "tls-webpki-roots"] }
opentelemetry-stdout = "0.26.0"
tonic = "0.12.3"
opentelemetry-appender-tracing = "0.26.0"
rstest = "0.22.0"

[dev-dependencies]
float-cmp = "0.10.0"
test-log = "0.2.16"
rstest = "0.22.0"
