[package]
name = "brian-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.10.0"
log = "0.4.17"
robotica-frontend = { path = "../robotica-frontend" }
serde_json = "1.0.87"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
web-sys = "0.3.60"
yew = "0.19"
yew-agent = "0.1.0"
yew-router = "0.16.0"
robotica-common = { path = "../robotica-common" }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
# futures = "0.3.25"
# js-sys = "0.3.22"
# wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.33"
