[package]
name = "brian-node-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
paho-mqtt = "0.11.1"
tokio = { version = "1.21.0", features = ["full"] }
serde = { version= "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.63"
env_logger = "0.9.0"
serde_path_to_error = "0.1.8"
chrono = "0.4.22"
chrono-tz = "0.6.3"
warp = "0.3.2"
robotica-node-rust = { path =  ".." }