[package]
name = "brian-node-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.65"
env_logger = "0.9.1"
serde_path_to_error = "0.1.8"
chrono = "0.4.22"
chrono-tz = "0.6.3"
warp = "0.3.2"
thiserror = "1.0.30"
pretty_env_logger = "0.4.0"
color-backtrace = "0.5.1"
robotica-node-rust = { path = ".." }
