[package]
name = "brian-node-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = { version = "1.21.1", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.65"
serde_path_to_error = "0.1.8"
chrono = "0.4.22"
chrono-tz = "0.7.0"
thiserror = "1.0.37"
color-backtrace = "0.5.1"
robotica-rust = { path = ".." }
axum = { version = "0.5.17", features = ["ws"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
reqwest = "0.11.6"
openid = "0.10.0"
maud = { version = "0.24.0", features = ["axum"] }
axum-sessions = "0.3.1"
base64 = "0.13.0"
url = "2.2.2"
futures = "0.3.25"
