[package]
name = "freeswitch"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
anyhow = "1.0.79"
color-backtrace = "0.6.1"
robotica-common = { path = "../robotica-common", features = ["chrono"] }
robotica-backend = { path = "../robotica-backend" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.30"
thiserror = "1.0.57"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
clap = { version = "4.5.0", features = ["derive"] }
chrono = "0.4.34"
itertools = "0.12.1"
envconfig = "0.10.0"
freeswitch-esl = { git = "https://github.com/KaranGauswami/freeswitch-esl.git" }
# freeswitch-esl = { path = "/home/brian/tree/3rdparty/freeswitch-esl"}
reqwest = "0.11.24"

[dependencies.openssl]
optional = true
version = "0.10.63"
