[package]
name = "robotica-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.138"
anyhow = "1.0.98"
serde_yml = "0.0.10"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
thiserror = "2.0.11"
color-backtrace = "0.7.0"
robotica-common = { path = "../robotica-common", features = ["websockets"] }
robotica-tokio = { path = "../robotica-tokio", features = ["websockets", "scheduler"] }
robotica-macro = { path = "../robotica-macro"}
influxdb = { version = "0.7.2", features = ["derive"]}
reqwest = { version = "0.12.5", features = ["json"] }
envconfig = "0.11.0"
tap = "1.0.1"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres"] }
geo = { version = "0.30.0" }
url = "2.5.4"
serde_tuple = "1.1.0"

data-encoding = "2.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-core = "0.1.33"
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["logs", "metrics", "tls-webpki-roots", "grpc-tonic"] }
opentelemetry-stdout = "0.29.0"
opentelemetry-appender-tracing = "0.29.0"
tonic = "0.12.3"
rstest = "0.22.0"

[dev-dependencies]
float-cmp = "0.10.0"
test-log = "0.2.16"
rstest = "0.22.0"
