[package]
name = "robotica-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.41", optional = true, features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
thiserror = "2.0.16"
serde_json = "1.0.143"
tracing = "0.1.41"
bytes = "1.10.1"
prost = { version = "0.14.1", optional = true }
prost-types = { version = "0.14.1", optional = true }
geo = { version = "0.31.0", features = ["serde", "use-serde"] }
tap = "1.0.1"

[build-dependencies]
prost-build = { version = "0.14.1", optional = true }

[dev-dependencies]
approx = "0.5.1"
chrono-tz = "0.10.4"

[features]
chrono = ["dep:chrono"]
websockets = ["dep:prost", "dep:prost-types", "dep:prost-build"]
