[package]
name = "robotica-freeswitch"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
anyhow = "1.0.86"
color-backtrace = "0.6.1"
robotica-common = { path = "../robotica-common", features = ["chrono"] }
robotica-tokio = { path = "../robotica-tokio" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yml = "0.0.10"
thiserror = "1.0.62"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.30"
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
itertools = "0.13.0"
envconfig = "0.10.0"
freeswitch-esl = { git = "https://github.com/KaranGauswami/freeswitch-esl.git" }
# freeswitch-esl = { path = "/home/brian/tree/3rdparty/freeswitch-esl"}
reqwest = "0.12.5"

[dependencies.openssl]
optional = true
version = "0.10.64"
