[package]
name = "robotica-freeswitch"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
anyhow = "1.0.100"
color-backtrace = "0.7.1"
robotica-common = { path = "../robotica-common", features = ["chrono"] }
robotica-tokio = { path = "../robotica-tokio" }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.13", features = ["derive"] }
chrono = "0.4.42"
itertools = "0.14.0"
envconfig = "0.11.1"
freeswitch-esl = { git = "https://github.com/KaranGauswami/freeswitch-esl.git" }
# freeswitch-esl = { path = "/home/brian/tree/3rdparty/freeswitch-esl"}
reqwest = "0.12.5"
rustls = { version = "0.23.32", features = ["aws_lc_rs"] }

[dependencies.openssl]
optional = true
version = "0.10.73"
