[package]
name = "robotica-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.1"
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
eyre = "0.6.12"
futures = "0.3.30"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
itertools = "0.13.0"
# See https://github.com/hamza1311/reqwasm/issues/35
reqwasm = { git = "https://github.com/brianmay/reqwasm.git", branch = "patch-1"}
serde = "1.0.204"
serde_json = "1.0.127"
thiserror = "1.0.62"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "= 0.2.93"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["DomTokenList"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
robotica-common = { path = "../robotica-common", features = [
    "chrono",
    "websockets",
] }
leaflet = "0.4.1"
gloo-utils = "0.2.0"
tap = "1.0.1"
geo = "0.28.0"
paste = "1.0.15"
js-sys = "0.3.69"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
# futures = "0.3.25"
# js-sys = "0.3.22"
# wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.42"
