[package]
name = "robotica-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10.1"
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
eyre = "0.6.12"
futures = "0.3.31"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
itertools = "0.14.0"
serde = "1.0.227"
serde_json = "1.0.147"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-wasm = "0.2.1"
wasm-bindgen = "= 0.2.106"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["DomTokenList"] }
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19.0"
robotica-common = { path = "../robotica-common", features = [
    "chrono",
    "websockets",
] }
leaflet = "0.5.0"
gloo-utils = "0.2.0"
tap = "1.0.1"
geo = "0.32.0"
paste = "1.0.15"
js-sys = "0.3.81"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
# futures = "0.3.25"
# js-sys = "0.3.22"
# wasm-bindgen-futures = "0.4.33"
wasm-bindgen-test = "0.3.54"
