[package]
name = "robotica-slint"
version = "0.1.0"
authors = ["Brian May <brian@linuxpenguins.xyz>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ['openssl/vendored']

[dependencies]
anyhow = "1.0.99"
color-backtrace = "0.7.0"
robotica-common = { path = "../robotica-common", default-features = false, features = ["chrono"] }
robotica-tokio = { path = "../robotica-tokio" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.10"
slint = "1.0.0"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"
clap = { version = "4.5.13", features = ["derive"] }
chrono = "0.4.41"
itertools = "0.14.0"
envconfig = "0.11.0"
tokio-util = "0.7.15"
tap = "1.0.1"

[dependencies.openssl]
optional = true
version = "0.10.73"

[build-dependencies]
slint-build = "1.0.0"
