[package]
name = "robotica-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
websockets = ["robotica-common/websockets"]
scheduler = ["pyo3"]

[dependencies]
bytes = "1.9.0"
rumqttc = "0.24.0"
rustls-native-certs = "0.8.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.10"
anyhow = "1.0.94"
reqwest = { version = "0.12.5", features = ["json"] }
# serde_path_to_error = "0.1.11"
gethostname = "0.5.0"
thiserror = "2.0.3"
chrono = "0.4.38"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
regex = "1.11.1"
tracing = "0.1.41"
robotica-common = { path = "../robotica-common", features = ["chrono"] }
robotica-macro = { path = "../robotica-macro" }
lifx-core = "0.4.0"
async-trait = "0.1.83"
pyo3 = { version = "0.23.2", features = ["auto-initialize", "chrono"], optional = true }

# http server
axum-core = "0.4.3"
axum = { version = "0.7.9", features = ["ws", "macros"] }
openid = "0.15.0"
maud = { version = "0.26.0", features = ["axum"] }
base64 = "0.22.1"
url = "2.5.3"
futures = "0.3.31"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = { version = "0.13.0" }
tower-sessions-sqlx-store = { version = "0.14.2", features = ["postgres"] }
arc-swap = "1.7.1"
hyper = "1.5.0"
time = "0.3.36"
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio"] }
geozero = { version = "0.14.0", features = ["with-postgis-sqlx"] }
geo = { version = "0.29.2", features = ["serde", "use-serde"] }
tap = "1.0.1"
rstest = "0.22.0"
opentelemetry = { version = "0.27.0", features = ["metrics"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
env_logger = "0.11.5"
