[package]
name = "robotica-tokio"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
websockets = ["robotica-common/websockets"]
scheduler = ["pyo3"]

[dependencies]
bytes = "1.10.1"
rumqttc = "0.25.0"
rustls-native-certs = "0.8.1"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
anyhow = "1.0.100"
reqwest = { version = "0.12.5", features = ["json"] }
# serde_path_to_error = "0.1.11"
gethostname = "1.1.0"
thiserror = "2.0.16"
chrono = "0.4.42"
lalrpop-util = { version = "0.23.0", features = ["lexer"] }
regex = "1.11.3"
tracing = "0.1.41"
robotica-common = { path = "../robotica-common", features = ["chrono"] }
robotica-macro = { path = "../robotica-macro" }
lifx-core = "0.4.0"
async-trait = "0.1.89"
pyo3 = { version = "0.28.0", features = ["auto-initialize", "chrono"], optional = true }

# http server
axum-core = "0.5.2"
axum = { version = "0.8.4", features = ["ws", "macros"] }
openid = "0.22.0"
maud = { version = "0.27.0", features = ["axum"] }
base64 = "0.22.1"
url = "2.5.7"
futures = "0.3.31"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tower-sessions = { version = "0.14.0" }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
arc-swap = "1.7.1"
hyper = "1.8.1"
time = "0.3.44"
sqlx = { version = "0.8.6", features = ["migrate", "postgres", "runtime-tokio"] }
geozero = { version = "0.15.0", features = ["with-postgis-sqlx"] }
geo = { version = "0.32.0", features = ["serde", "use-serde"] }
tap = "1.0.1"
rstest = "0.26.0"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }

[build-dependencies]
lalrpop = "0.23.0"

[dev-dependencies]
env_logger = "0.11.8"
