[tool.poetry]
name = "robotica"
version = "0.1.0"
description = ""
authors = ["Brian May <brian@linuxpenguins.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
icalendar = "^5.0.8"
recurring-ical-events = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
