[project]
name = "robotica"
version = "0.1.0"
description = ""
authors = [ {name="Brian May", email="brian@linuxpenguins.xyz"}, ]
readme = "README.md"
dependencies = [
    "icalendar ==5.0.13",
    "recurring-ical-events == 2.0.2",]
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "python-lsp-server == 1.12.2",
    "python-lsp-ruff ==2.3.0",
    "python-lsp-black == 2.0.0",
    "pylsp-mypy == 0.7.0",]
