[project]
name = "robotica"
version = "0.1.0"
description = ""
authors = [ {name="Brian May", email="brian@linuxpenguins.xyz"}, ]
readme = "README.md"
dependencies = [
    "icalendar ==6.3.2",
    "recurring-ical-events ==3.8.0",]
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "python-lsp-server ==1.14.0",
    "python-lsp-ruff ==2.3.0",
    "python-lsp-black == 2.0.0",
    "pylsp-mypy ==0.7.1",]
